--- a/APP/campus-service-backend/package.json
+++ b/APP/campus-service-backend/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon server.js",
     "start:prod": "set NODE_ENV=production && node server.js",
     "seed:admin": "node scripts/seedAdmin.js",
+    "migrate:legacy": "node scripts/migrateLegacy.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "commonjs",
