Harden Mongo URI env handling

--- a/campus-service-backend/.env.example
+++ b/campus-service-backend/.env.example
@@ -3,6 +3,10 @@ NODE_ENV=development
 
 # MongoDB
 MONGO_URI=mongodb://localhost:27017/campusdb
+# Common alternatives (some hosts/providers use these names):
+# MONGODB_URI=...
+# MONGO_URL=...
+# DATABASE_URL=...
 
 # Server
 PORT=5000
